fix(AreaSearchDialog): 修复地图编辑器的变量声明和坐标更新逻辑
修复了 `AreaSearchDialog.vue` 组件中地图编辑器的变量声明问题，将 `editor` 变量改为 `const` 声明。同时，更新了坐标计算逻辑，将绘制的矩形区域的坐标正确赋值给 `this.area`，并移除了不必要的 `console.log` 调用。

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script
       src="https://map.qq.com/api/gljs?v=1.exp&key=OB4BZ-D4W3U-B7VVO-4PJWW-6TKDJ-WPB77&libraries=visualization"></script>
+    <script
+      src="https://map.qq.com/api/gljs?v=1.exp&key=OB4BZ-D4W3U-B7VVO-4PJWW-6TKDJ-WPB77&&libraries=tools"></script>
   </head>
 
 
